--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 loadingIndicator.classList.remove('hidden');
 
                 try {
-                    const response = await fetch('https://cafehunter.onrender.com:5000/search', {
+                    const response = await fetch('https://cafehunter.onrender.com/search', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
@@ -405,7 +405,7 @@
                 `;
 
                 try {
-                    const detailsResponse = await fetch('https://cafehunter.onrender.com:5000/details', {
+                    const detailsResponse = await fetch('https://cafehunter.onrender.com/details', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
@@ -414,7 +414,7 @@
                     });
                     const detailsData = await detailsResponse.json();
 
-                    const imagesResponse = await fetch('https://cafehunter.onrender.com:5000/images', {
+                    const imagesResponse = await fetch('https://cafehunter.onrender.com/images', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
@@ -423,7 +423,7 @@
                     });
                     const imagesData = await imagesResponse.json();
 
-                    const menuResponse = await fetch('https://cafehunter.onrender.com:5000/menu', {
+                    const menuResponse = await fetch('https://cafehunter.onrender.com/menu', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
@@ -595,4 +595,5 @@
     </script>
 </body>
 </html>
+
 
